syntax = "proto3";
package bpfd.v1;
option go_package = "github.com/redhat-et/clients/gobpfd/v1;v1";

service Loader {
    rpc Load (LoadRequest) returns (LoadResponse);
    rpc Unload (UnloadRequest) returns (UnloadResponse);
    rpc List (ListRequest) returns (ListResponse);
}

enum ProgramType {
    XDP = 0;
    TC = 1;
    TRACEPOINT = 2;
}

enum Direction {
    NONE = 0;
    INGRESS = 1;
    EGRESS = 2;
}

enum ProceedOn {
    ABORTED = 0;
    DROP = 1;
    PASS = 2;
    TX = 3;
    REDIRECT = 4;
    DISPATCHER_RETURN = 31;
}

message LoadRequest {
    string path = 1;
    bool from_image = 2;
    string section_name = 3;
    ProgramType program_type = 4;
    Direction direction = 5;
    oneof attach_type {
        NetworkMultiAttach network_multi_attach = 6;
        SingleAttach single_attach = 7;
    }
};

message NetworkMultiAttach {
    int32 priority = 1;
    string iface = 2;
    int32 position = 3;
    repeated ProceedOn proceed_on = 4;
}

message SingleAttach {
    string name = 1;
}

message LoadResponse {
    string id = 1;
}

message UnloadRequest {
    string id = 1;
}

message UnloadResponse {}

message ListRequest {}

message ListResponse {
  message ListResult {
    string id = 1;
    string name = 2;
    string path = 3;
    ProgramType program_type = 4;
    Direction direction = 5;
    oneof attach_type {
        NetworkMultiAttach network_multi_attach = 6;
        SingleAttach single_attach = 7;
    }
  }
  repeated ListResult results = 2;
}
